added stock videos and cleaned up code

--- a/show.html
+++ b/show.html
@@ -21,9 +21,9 @@
 			 	<form name="pick" class="form-horizontal" role="form">
 			 		<p>Show:</p>
 			 		<select id="show" name="show" onclick="updateSeason(this.selectedIndex)"class="form-control">
-					  <option>Family Guy</option>
-					  <option>American Dad</option>
-					  <option>South Park</option>
+					  <option>Show1</option>
+					  <option>Show2</option>
+					  <option>Show3</option>
 					</select>
 					
 					<div id="season">
